@@ -25,7 +25,7 @@ DateTime = 0.61
 DateTime::Format::Strptime = 1.4000
 MIME::Base64::URLSafe = 0.01
 URI::Encode = 0.02
-Exception::Class = 1.32
+Ouch = 0.0400
 
 [MetaNoIndex]
 folder = author.t
