@@ -1,10 +1,10 @@
-use Test::More tests => 14;
+use Test::More tests => 12;
 use lib '../lib';
+use Ouch;
 
 use_ok('Facebook::Graph');
 my $fb = Facebook::Graph->new;
 isa_ok($fb, 'Facebook::Graph');
-use_ok('Facebook::Graph::Exception');
 
 my $sarah_query = $fb->query
     ->find('sarahbownds')
@@ -25,9 +25,7 @@ is($sarah->{name}, 'Sarah Bownds', 'know her name');
 is(scalar(keys %{$sarah}), 4, 'only fetched the things i asked for');
 is($sarah->{type}, 'user', 'she is a user');
 
-my $error_query = eval { $fb->query->select_fields('')->request->as_json };
-my $e = Exception::Class->caught('Facebook::Graph::Exception::RPC'); 
-isa_ok($e, 'Facebook::Graph::Exception::RPC');
-is($e->http_code, 400, 'exception inherits http status code');
-is($e->error, 'Could not execute request (https://graph.facebook.com?fields=): GraphMethodException - Unsupported get request.', 'exception gives good detail');
+eval { $fb->query->select_fields('')->request->as_json };
+is($@->code, 400, 'exception inherits http status code');
+is($@->message, 'Could not execute request (https://graph.facebook.com?fields=): GraphMethodException - Unsupported get request.', 'exception gives good detail');
 
